--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Streemi - Détail d'une série{% endblock %}
+{% block title %}Blog d'Anto{% endblock %}
 
 {% block content %}
 {% endblock %}
