--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -76,16 +76,24 @@
             </a>
 
             <div class="relative" x-data="{ open: false }">
-                <button @click="open = !open" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded inline-flex items-center">
+                <button @click="open = !open" type="button" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded inline-flex items-center">
                     <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5h12M9 3v2m1.048 9.5A18.022 18.022 0 016.412 9m6.088 9h7M11 21l5-10 5 10M12.751 5C11.783 10.77 8.07 15.61 3 18.129"/>
                     </svg>
                     Traduire
                 </button>
-                <div x-show="open" @click.away="open = false" class="absolute right-0 mt-2 py-2 w-48 bg-white rounded-md shadow-xl z-20">
+                <div x-show="open" 
+                     @click.away="open = false"
+                     x-transition:enter="transition ease-out duration-200"
+                     x-transition:enter-start="opacity-0 transform scale-90"
+                     x-transition:enter-end="opacity-100 transform scale-100"
+                     x-transition:leave="transition ease-in duration-100"
+                     x-transition:leave-start="opacity-100 transform scale-100"
+                     x-transition:leave-end="opacity-0 transform scale-90"
+                     class="absolute right-0 mt-2 py-2 w-48 bg-white rounded-md shadow-xl z-20">
                     {% for language in languages %}
                         {% if article.language != language %}
-                            <form method="post" action="{{ path('app_article_translate', {'id': article.id, 'language': language.id}) }}" class="block w-full">
+                            <form method="post" action="{{ path('app_article_translate', {'id': article.id, 'language': language.id}) }}" class="block w-full" @submit="open = false">
                                 <input type="hidden" name="_token" value="{{ csrf_token('translate' ~ article.id) }}">
                                 <button type="submit" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 w-full text-left">
                                     {{ language.label }}
